apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'eu.davidea.grabver'

versioning {
    major 0
    minor 1
    //preRelease "rc1"
}

version = versioning.name

android {
    compileSdkVersion 26
    buildToolsVersion '26.0.2'
    defaultConfig {
        applicationId "com.nextcloud.talk"
        versionName version
        minSdkVersion 21
        targetSdkVersion 26
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

        // Enabling multidex support.
        multiDexEnabled true

        vectorDrawables.useSupportLibrary = true

        lintOptions {
            disable 'InvalidPackage'
        }

    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/rxjava.properties'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

}

ext {
    supportLibraryVersion = '26.1.0'
    googleLibraryVersion = '11.6.0'
}


configurations.all {
    resolutionStrategy {
        force "com.android.support:cardview-v7:${supportLibraryVersion}"
        force "com.android.support:preference-v7:${supportLibraryVersion}"
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
    implementation "com.android.support:design:${supportLibraryVersion}"
    implementation 'com.android.support:multidex:1.0.2'

    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation "io.reactivex.rxjava2:rxjava:2.1.4"

    implementation 'com.bluelinelabs:conductor:2.1.4'
    implementation 'com.bluelinelabs:conductor-support:2.1.4'

    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'

    implementation 'com.bluelinelabs:logansquare:1.3.7'
    annotationProcessor 'com.bluelinelabs:logansquare-compiler:1.3.7'

    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
    implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'

    implementation 'com.google.dagger:dagger:2.8'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
    implementation 'com.github.lukaspili.autodagger2:autodagger2:1.1'
    annotationProcessor 'com.github.lukaspili.autodagger2:autodagger2-compiler:1.1'

    implementation 'org.greenrobot:eventbus:3.0.0'

    implementation 'io.requery:requery:1.4.1'
    implementation 'io.requery:requery-android:1.4.1'
    implementation 'net.zetetic:android-database-sqlcipher:3.5.7'
    annotationProcessor 'io.requery:requery-processor:1.4.1'

    compile 'org.parceler:parceler-api:1.1.9'
    annotationProcessor 'org.parceler:parceler:1.1.9'

    implementation 'net.orange-box.storebox:storebox-lib:1.4.0'

    compileOnly "org.projectlombok:lombok:1.16.18"
    annotationProcessor "org.projectlombok:lombok:1.16.18"

    implementation 'com.jakewharton:butterknife:8.8.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'

    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'

    implementation "javax.transaction:transaction-api:1.1-rev-1"

    implementation 'com.github.HITGIF:TextFieldBoxes:1.3.4'

    implementation 'eu.davidea:flexible-adapter:5.0.0-rc3'

    implementation 'cn.carbs.android:AvatarImageView:1.0.4'

    implementation 'com.github.bumptech.glide:glide:4.3.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.3.0@aar'
    implementation 'org.webrtc:google-webrtc:1.0.+'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"

    implementation 'com.evernote:android-job:1.2.0'

    implementation "com.google.firebase:firebase-messaging:${googleLibraryVersion}"
    implementation "com.google.android.gms:play-services-base:${googleLibraryVersion}"
    implementation "com.google.android.gms:play-services-gcm:${googleLibraryVersion}"
    implementation "com.google.firebase:firebase-core:${googleLibraryVersion}"

    implementation 'com.yarolegovich:lovely-dialog:1.0.7'
    implementation 'com.yarolegovich:lovelyinput:1.0.2'
    implementation 'com.yarolegovich:mp:1.0.8'

    implementation 'ru.alexbykov:nopermission:1.1.1'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'

    testImplementation 'junit:junit:4.12'
    androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
}

apply plugin: 'com.google.gms.google-services'
